src/tests/test-src/errors/E79-alias-space.syntran
// E79: alias-space
// A module alias contains a space

use foo as a b;
